<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <SwitchPreference
        app:key="display_extended_title"
        app:summary="@string/display_extended_title_summary"
        app:title="@string/display_extended_title" />

    <PreferenceCategory app:title="@string/mpv_player">
        <SwitchPreference
            app:key="mpv_player"
            app:summary="@string/mpv_player_summary"
            app:title="@string/mpv_player" />
        <SwitchPreference
            app:dependency="mpv_player"
            app:key="mpv_disable_hwdec"
            app:summary="@string/force_software_decoding_summary"
            app:title="@string/force_software_decoding" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/gestures">
        <SwitchPreference
            app:defaultValue="true"
            app:key="pref_player_gestures"
            app:title="@string/player_gestures" />
        <SwitchPreference
            app:defaultValue="true"
            app:dependency="pref_player_gestures"
            app:key="pref_player_gestures_vb"
            app:summary="@string/player_gestures_vb_summary"
            app:title="@string/player_gestures_vb" />
        <SwitchPreference
            app:defaultValue="true"
            app:dependency="pref_player_gestures"
            app:key="pref_player_gestures_zoom"
            app:summary="@string/player_gestures_zoom_summary"
            app:title="@string/player_gestures_zoom" />
        <SwitchPreference
            app:dependency="pref_player_gestures_vb"
            app:key="pref_player_brightness_remember"
            app:title="@string/player_brightness_remember" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/seeking">
        <EditTextPreference
            app:defaultValue="5000"
            app:key="pref_player_seek_back_inc"
            app:title="@string/seek_back_increment"
            app:useSimpleSummaryProvider="true"
            android:inputType="number"/>
        <EditTextPreference
            app:defaultValue="15000"
            app:key="pref_player_seek_forward_inc"
            app:title="@string/seek_forward_increment"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

</PreferenceScreen>