<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_category_language">

        <ListPreference
            app:defaultValue="null"
            app:entries="@array/languages"
            app:entryValues="@array/languages_values"
            app:key="audio_language"
            app:title="@string/settings_preferred_audio_language"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="null"
            app:entries="@array/languages"
            app:entryValues="@array/languages_values"
            app:key="subtitle_language"
            app:title="@string/settings_preferred_subtitle_language"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_category_servers">

        <Preference
            app:key="switchServer"
            app:title="@string/switch_server" />

    </PreferenceCategory>

</PreferenceScreen>