<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="dev.jdtech.jellyfin.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_media"
        android:name="dev.jdtech.jellyfin.fragments.MediaFragment"
        android:label="@string/title_media"
        tools:layout="@layout/fragment_media" >
        <action
            android:id="@+id/action_navigation_media_to_libraryFragment"
            app:destination="@id/libraryFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="dev.jdtech.jellyfin.fragments.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/libraryFragment"
        android:name="dev.jdtech.jellyfin.fragments.LibraryFragment"
        android:label="library_fragment"
        tools:layout="@layout/fragment_library" />
</navigation>