<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="item"
            type="org.jellyfin.sdk.model.api.BaseItemDto" />
    </data>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        tools:context=".fragments.MediaInfoFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@{item.originalTitle}"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">


            <TextView
                android:id="@+id/year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@{item.productionYear}"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:text="2019" />

            <TextView
                android:id="@+id/playtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@{item.runTimeTicks.toString()}"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:text="122 min" />

            <TextView
                android:id="@+id/official_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@{item.officialRating}"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:text="PG-13" />

            <TextView
                android:id="@+id/community_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{item.communityRating.toString()}"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:text="7.3" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/genres_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp">

                <TextView
                    android:id="@+id/genres_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genres"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/genres"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="64dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Action, Science Fiction, Adventure" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/director_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp">

                <TextView
                    android:id="@+id/director_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/director"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/director"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="64dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Robert Rodriguez" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/writers_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/writers_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/writers"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/writers"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="64dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="James Cameron, Laeta Kalogridis, Yukito Kishiro" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@{item.overview}"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            tools:text="An angel falls. A warrior rises. When Alita awakens with no memory of who she is in a future world she does not recognize, she is taken in by Ido, a compassionate doctor who realizes that somewhere in this abandoned cyborg shell is the heart and soul of a young woman with an extraordinary past." />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cast_amp_crew"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

</layout>
